feat: modular composition (libpetri 2.0)
Introduces open-net composition across Java, TypeScript, and Rust:

- SubnetDef + Interface (typed ports and channels)
- Instance with prefix-rename for state isolation
- PetriNet.builder().compose(instance, bindings)
- FusionSet for N-ary place equivalence
- Per-instance bindActions overrides (share-by-default)
- VerificationHarness for proving subnet properties in isolation

Companion changes:

- DOT export emits subgraph clusters per instance prefix
- Debug protocol carries SubnetInstance descriptors; debug-ui gains
  a subnet panel for prefix-tree navigation
- Java doclet: @SubnetStructure annotation, {@subnet} taglet,
  SubnetDotExport for interface-only diagrams
- Canonical viewer extracted to typescript/src/viewer/, distributed
  to Java javadoc + Rust docgen + TS doclet via scripts/build-viewer.sh
- Cross-language DOT byte-parity check (EXP-014) wired up across
  Java/TS/Rust fixtures via scripts/cross-lang-dot-parity.sh

Spec: spec/11-modular-composition.md (MOD-001..061, 22 reqs).
Spec totals: 156 -> 183 across 11 documents.

Documentation:

- README, CHANGELOG, typescript/README, rust/libpetri/README updated
- Version bumps: Java 2.0.0, TypeScript 2.0.0, Rust workspace 2.0.0

Additive release - existing 1.x builder, runtime, event, export, and
verification code compiles and runs unchanged.